--- a/_sass/_skills.scss
+++ b/_sass/_skills.scss
@@ -22,6 +22,7 @@
 .skill-bar {
     width: 100%;
     height: 5px;
+    border-radius: 40px;
     background: $primary;
     display: block;
     position: relative;
