--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,10 +8,10 @@ layout: page
   {{ page.date | date_to_long_string }} -
   <b>
   {% assign words = content | number_of_words %}
-  {% if words < 360 %}
+  {% if words < 300 %}
     less than 1 min read time
   {% else %}
-    {{ words | divided_by:270 }} mins read time
+    {{ words | divided_by:300 }} mins read time
   {% endif %}
   </b>
 
@@ -20,7 +20,7 @@ layout: page
   {% if page.tags != empty %}
     Tags:
     {% for tag in page.tags %}
-    <a class="text-decoration-none no-underline" href="{{ tag | slugify | prepend:'/articles/tags#' | relative_url }}">
+    <a class="text-decoration-none no-underline" href="{{ tag | slugify | prepend:'/essays/tags#' | relative_url }}">
       <span class="tag badge badge-pill text-primary border border-primary">{{ tag }}</span>
     </a>
     {% endfor %}
