--- a/_sass/_skills.scss
+++ b/_sass/_skills.scss
@@ -27,16 +27,16 @@
     display: block;
     position: relative;
 
-    span{
-        position: absolute;
-        border-top: 5px solid inherit;
-        top: -30px;
-        padding: 0;
-        font-size: 18px;
-        padding: 3px 0;
-        font-weight: 500;
-        right: 0;
-    }
+/*    span{
+      position: absolute;
+      border-top: 5px solid inherit;
+      top: -30px;
+      padding: 0;
+      font-size: 18px;
+      padding: 3px 0;
+      font-weight: 500;
+      right: 0;
+    }*/
 }
 
 .skill-bar.skill-bar-secondary { background: $secondary; }
