--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -5,6 +5,7 @@
 
     .card-img-top {
         border-radius: $rounded-borders $rounded-borders 0 0;
+        width: auto;
     }
 
     &:hover:not(.article) {
